# rdma_dada

./: .gitignore  ARCHITECTURE.md  BUGFIXES_AND_IMPROVEMENTS.md  CMakeLists.txt  EXTRACTION_SUMMARY.md  INDEX.md  NON_CONTIGUOUS_MEMORY_SOLUTION.md  PSRDADA_ROCE_INTEGRATION.md  QUICKSTART.md  README.md  USAGE_EXAMPLE.md  WORKFLOW.md  build.sh  check_psrdada_ring.sh  run_demo.sh
demo/: Demo_psrdada_online.cpp
header/: array_GZNU.header
include/: RoCEv2Dada.h  dada_header.h  ibv_utils.h  pkt_gen.h  psrdada_ringbuf.h
src/: RoCEv2Dada.cpp  dada_header.cpp  ibv_utils.cpp  pkt_gen.cpp  psrdada_ringbuf.cpp
